--- a/SwatchThis/SwatchThis.csproj
+++ b/SwatchThis/SwatchThis.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E8CD9920-B363-488B-B70A-F2ECF3C3AB3A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ColourAtCursor</RootNamespace>
+    <RootNamespace>SwatchThis</RootNamespace>
     <AssemblyName>SwatchThis</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
